# analysisrs

./: .gitignore  Cargo.toml  README.md  build.rs
data/: CruiseData.csv
migrations/2021-04-26-193555_create_titanic/: down.sql  up.sql
migrations/2021-04-26-193605_create_cruise/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/models/: cruise_data.rs  mod.rs  stock_history.rs  titanic.rs
