[package]
name = "analysisrs"
version = "0.1.0"
authors = ["Eric Hocking <ehock7229@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "extras"] }
dotenv = "0.15.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
mysqlclient-sys = { version = "0.2.0" }
chrono = { version = "0.4.19", features = ["serde"] }